start of adjusting preprocessing functions from dev to open-source structure. included toml and setup file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # conda retap environment
 retap_test/
 
+# own dev files
+data/settings/config_jh.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
